--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,48 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.3.2'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
-
-group = 'com.github.gun2'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+
+
+allprojects {
+    apply plugin: 'java'
+
+
+
+
+}
+
+subprojects {
+    group = 'com.github.gun2'
+    version = '1.0-SNAPSHOT'
+    sourceCompatibility = '21'
+
+    apply plugin: 'java'
+    apply plugin: 'java-library'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'io.spring.dependency-management'
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+    }
 }
 
 dependencies {
