--- a/common/reactor-common/build.gradle
+++ b/common/reactor-common/build.gradle
@@ -1,13 +1,15 @@
 
 dependencies {
-    api 'org.springframework.boot:spring-boot-starter-web'
+    api 'org.springframework.boot:spring-boot-starter'
+    api 'org.springframework.boot:spring-boot-starter-jdbc'
+    api 'org.springframework.boot:spring-boot-starter-webflux'
+    api 'org.springframework.boot:spring-boot-starter-validation'
 
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     api project(":common:board-dto-model")
-    api project(":common:board-jpa-common")
+
 }
 
 tasks.named('test') {
