게시판 조회 API의 성능을 측정하기 위한 서비스 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include(":app:multi-thread-api-app")
 include(":app:virtual-multi-thread-api-app")
 include(":app:reactor-api-block-db-app")
 include(":app:reactor-api-non-block-db-app")
+include(":app:measurement-app")
 include(":common:board-dto-model")
 include(":common:board-jpa-common")
 include(":common:multi-thread-common")
