--- a/app/measurement-app/src/main/resources/application.properties
+++ b/app/measurement-app/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.application.name=measurement-app
-
-app.target.url=http://localhost:8081
-
 logging.level.root=info
+
+app.target.url=${APP_TARGET_URL}
+
+app.read.measurement.config.init-client=100
+app.read.measurement.config.increasing-client=100
+app.read.measurement.config.duration-ms-per-phase=5000
+app.read.measurement.config.phase=10
+app.read.measurement.config.output-path=board_read_output.json
+
+app.create.measurement.config.init-client=100
+app.create.measurement.config.increasing-client=100
+app.create.measurement.config.duration-ms-per-phase=5000
+app.create.measurement.config.phase=10
+app.create.measurement.config.output-path=board_create_output.json
+
