사용하지 않는 설정 밎 로직 제거 > 측정 모듈이 properties를 통해 설정값을 부여받아 측정을 진행하는 방식에서 shell command 방식으로 변경되므로써 properties로 설정값을 사용하던 코드 제거

--- a/app/measurement-app/src/main/resources/application.properties
+++ b/app/measurement-app/src/main/resources/application.properties
@@ -1,18 +1,6 @@
+server.port=9000
+
 spring.shell.interactive.enabled=true
+
 spring.application.name=measurement-app
 logging.level.root=info
-
-app.target.url=${APP_TARGET_URL}
-
-app.read.measurement.config.init-client=100
-app.read.measurement.config.increasing-client=100
-app.read.measurement.config.duration-ms-per-phase=5000
-app.read.measurement.config.phase=10
-app.read.measurement.config.output-path=board_read_output.json
-
-app.create.measurement.config.init-client=100
-app.create.measurement.config.increasing-client=100
-app.create.measurement.config.duration-ms-per-phase=5000
-app.create.measurement.config.phase=10
-app.create.measurement.config.output-path=board_create_output.json
-
