--- a/app/measurement-app/build.gradle
+++ b/app/measurement-app/build.gradle
@@ -3,8 +3,10 @@ ext {
 	applicationName = 'measurement-app'
 }
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.shell:spring-shell-starter'
+	implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
