mariadb 호환성 추가

--- a/app/reactor-api-block-db-app/build.gradle
+++ b/app/reactor-api-block-db-app/build.gradle
@@ -2,6 +2,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.0'
 
     implementation project(':common:reactor-common')
     api project(":common:board-jpa-common")
