--- a/app/reactor-api-non-block-db-app/build.gradle
+++ b/app/reactor-api-non-block-db-app/build.gradle
@@ -5,6 +5,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
     // https://mvnrepository.com/artifact/io.r2dbc/r2dbc-h2
     runtimeOnly 'io.r2dbc:r2dbc-h2'
+    // https://mvnrepository.com/artifact/org.mariadb/r2dbc-mariadb
+    runtimeOnly 'org.mariadb:r2dbc-mariadb:1.3.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation project(':common:reactor-common')
