무거운 기능의 API 및 측정 로직 추가

--- a/common/multi-thread-common/build.gradle
+++ b/common/multi-thread-common/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 
     api project(":common:board-dto-model")
     api project(":common:board-jpa-common")
+    api project(":common:heavy-common")
 }
 
 tasks.named('test') {
